# python-job-worker-starter

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
docs/: conventions.md  quickstart.md
scripts/: create_modal_secrets.sh  dev.py  migrate.py
specs/001-starter-application/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-starter-application/contracts/: health-api.md  jobs-api.md
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/routes/: health.py
src/api/routes/jobs/: __init__.py  router.py
src/config/: __init__.py  database.py  supabase.py
src/deployment/: __init__.py  deploy.py  modal_app.py  modal_workers.py
src/middleware/: __init__.py  metrics.py  request_id.py
src/models/: __init__.py  common.py  config.py  responses.py
src/models/jobs/: __init__.py  job.py  job_status.py
src/services/job_queue/: __init__.py  database.py  queue.py  service.py  spawner.py
src/utils/: logging.py
